apps/smart-farming-api-gateway/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - host: dreamcraft.smartfarming.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port: 
              number: 8080
